Fixed Card Alignment

--- a/frontend/icdb/src/app/authors/authors.component.css
+++ b/frontend/icdb/src/app/authors/authors.component.css
@@ -23,3 +23,8 @@ mat-grid-tile:hover {
     float:right;
    
   }
+  
+  .author-card {
+   width: 300px;
+   height: auto;
+}
